# ONNXCrossSample

./: README.md  compile.sh  onnxPrepare.md
test/: CMakeLists.txt  test.sh
test/model/: easy_example.onnx  easy_example_2.onnx  logreg_iris.onnx  mlp.onnx
test/src/: ONNXWorker.cpp  ONNXWorker.h  test1.cpp  testEndian.cpp  testONNXWorker.cpp
